--- a/aleqs/Magento_Search/templates/form.mini.phtml
+++ b/aleqs/Magento_Search/templates/form.mini.phtml
@@ -67,5 +67,6 @@ $configProvider = $block->getData('configProvider');
                     $(".form.minisearch").toggle();
                 });
         });
+        $('.action.nav-toggle span').html('Menu');
     });
 </script>
