--- a/Devall/aleqs/Magento_Theme/layout/default.xml
+++ b/Devall/aleqs/Magento_Theme/layout/default.xml
@@ -29,9 +29,11 @@
         </referenceBlock>
         <referenceContainer name="header.panel">
             <block class="Magento\Store\Block\Switcher" name="store_language" as="store_language" template="Magento_Store::switch/languages.phtml"/>
+            <block class="Magento\Customer\Block\Account\AuthorizationLink" name="custom-authorization-link" template="Magento_Customer::account/link/authorization.phtml"/>
+            <block class="Magento\Wishlist\Block\Link" name="custom-wish-list-link" template="Magento_Wishlist::mobile-link.phtml" after="top.links"/>
         </referenceContainer>
         <move element="navigation.sections" destination="header-wrapper"/>
-        <move element="minicart" destination="header.panel" after="top.links"/>
+        <move element="minicart" destination="header.panel" after="custom-authorization-link"/>
         <referenceBlock name="catalog.topnav">
             <block class="Magento\Framework\View\Element\Template" name="custom-sections" template="Magento_Theme::custom_sections.phtml" />
         </referenceBlock>
