--- a/Devall/aleqs/web/css/source/_variables.less
+++ b/Devall/aleqs/web/css/source/_variables.less
@@ -13,13 +13,17 @@
 
 //  Fonts
 
-@font-family-name__base: 'PT Sans';
+@font-family-name__base: sans-serif;
 @font-family__base: @font-family-name__base, @font-family__sans-serif;
 
 //
 //  Sections variables
 //  _____________________________________________
-@main-color: #7bad23;
+@main-color: #5cbc2c;
+@main-color-dark: #44a919;
+@responsive-nav-icons-color: #444444;
+@responsive-nav-icons-font-size: 23px;
+@background-color-dark: #302e33;
 
 //
 //  Tabs
