--- a/Devall/aleqs/Magento_Newsletter/templates/subscribe.phtml
+++ b/Devall/aleqs/Magento_Newsletter/templates/subscribe.phtml
@@ -44,7 +44,7 @@
                             <?= $block->escapeHtml(__('Sign Up for Our Newsletter:')) ?>
                         </span>
                                 <input name="email" type="email" id="newsletter"
-                                       placeholder="<?= $block->escapeHtml(__('Enter your email address')) ?>"
+                                       placeholder="<?= $block->escapeHtml(__('Enter your email...')) ?>"
                                        data-mage-init='{"mage/trim-input":{}}'
                                        data-validate="{required:true, 'validate-email':true}"
                                 />
