--- a/Devall/aleqs/Magento_Theme/templates/mobile_payment_help.phtml
+++ b/Devall/aleqs/Magento_Theme/templates/mobile_payment_help.phtml
@@ -1,5 +1,4 @@
 <div class="mobile-payment-help">
-    <span class="title-bold">100% Secure & Trusted Payment</span>
-    <br>
-    <span class="sub-text">Need help? Call us at +xxxx-xxx-xxx-xxx for any assistance required</span>
+    <div class="title-bold">100% Secure & Trusted Payment</div>
+    <div class="sub-text">Need help? Call us at +xxxx-xxx-xxx-xxx for any assistance required</div>
 </div>
